<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_Creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_creator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insert_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/insert_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Select_Click"
            android:text="@string/btn_Select" />

        <Button
            android:id="@+id/btn_Insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Insert_Click"
            android:text="@string/btn_Insert" />

        <Button
            android:id="@+id/btn_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Update_Click"
            android:text="@string/btn_Update" />

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_Delete_Click"
            android:text="@string/btn_Delete" />
    </LinearLayout>

</LinearLayout>